deployment/Kubernetes/pingcentral-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral-db
  name: pingcentral-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingcentral-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingcentral-db
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql
        imagePullPolicy: "Always"
        name: pingcentral-db
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
