deployment/Kubernetes/pingcentral-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral
  name: pingcentral
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingcentral
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingcentral
    spec:
      containers:
      - args:
        - wait-for
        - pingfederate:9031
        - -t
        - "7200"
        - --
        - entrypoint.sh
        - start-server
        image: pingidentity/pingcentral
        imagePullPolicy: "Always"
        name: pingcentral
        ports:
        - containerPort: 9022
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
