deployment/Kubernetes/pingcentral-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral-db
  name: pingcentral-db
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: pingcentral-db
status:
  loadBalancer: {}
