deployment/Kubernetes/pingcentral-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral
  name: pingcentral
spec:
  ports:
  - name: "9022"
    port: 9022
    targetPort: 9022
  selector:
    io.kompose.service: pingcentral
status:
  loadBalancer: {}
