deployment/Kubernetes/pingcentral.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral-db
  name: pingcentral-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingcentral-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingcentral-db
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql
        imagePullPolicy: "IfNotPresent"
        name: pingcentral-db
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral-db
  name: pingcentral-db
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: pingcentral-db
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral
  name: pingcentral
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingcentral
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingcentral
    spec:
      containers:
      - args:
        - wait-for
        - pingfederate:9031
        - -t
        - "7200"
        - --
        - entrypoint.sh
        - start-server
        image: pingidentity/pingcentral
        imagePullPolicy: "IfNotPresent"
        name: pingcentral
        ports:
        - containerPort: 9022
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingcentral
  name: pingcentral
spec:
  ports:
  - name: "9022"
    port: 9022
    targetPort: 9022
  selector:
    io.kompose.service: pingcentral
status:
  loadBalancer: {}
