deployment/Kubernetes/pingdataconsole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  labels:
    io.kompose.service: pingdataconsole
  name: pingdataconsole
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingdataconsole
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      labels:
        io.kompose.service: pingdataconsole
    spec:
      containers:
      - image: pingidentity/pingdataconsole:latest
        imagePullPolicy: "IfNotPresent"
        name: pingdataconsole
        ports:
        - containerPort: 8080
        - containerPort: 8443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  labels:
    io.kompose.service: pingdataconsole
  name: pingdataconsole
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8443"
    port: 8443
    targetPort: 8443
  selector:
    io.kompose.service: pingdataconsole
status:
  loadBalancer: {}
