deployment/Kubernetes/pingfederate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingfederate
  name: pingfederate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingfederate
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingfederate
    spec:
      containers:
      - args:
        - wait-for
        - pingdirectory:1636
        - -t
        - "7200"
        - --
        - entrypoint.sh
        - start-server
        image: pingidentity/pingfederate:latest
        imagePullPolicy: "IfNotPresent"
        name: pingfederate
        ports:
        - containerPort: 9031
        - containerPort: 9999
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingfederate
  name: pingfederate
spec:
  ports:
  - name: "9031"
    port: 9031
    targetPort: 9031
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: pingfederate
status:
  loadBalancer: {}
